fixed spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -250,6 +250,10 @@ footer#site-footer{
   z-index: 2;
   border-bottom: 5px solid;
 
+  @media(max-width: 480px){
+    margin-bottom: 15px;
+  }
+
   &.category-jump{
     bottom: 0;
     padding: 135px 15px 15px;
@@ -344,6 +348,9 @@ footer#site-footer{
       content: "";
       position: absolute;
     }
+    @media(max-width: 480px){
+
+    }
   }
   
 
@@ -361,11 +368,21 @@ footer#site-footer{
       padding-left: 15px;
       font-weight: 400;
     }
+    @media(max-width:480px){
+      h1 {
+        padding: 0 20px;
+      }
+    }
   }
 
   &.story-breaking{
     .breaking{
       @extend %breaking;
+    }
+    @media(max-width:480px){
+      .breaking {
+        display: none;
+      }
     }
   }
 
@@ -711,27 +728,19 @@ a.link-wrap{
   section.category {
     width: 90%;
     margin: 0 auto;
+    padding: 0 15px;
+    h2 {
+      padding-bottom: 10px;
+      font-size: 30px;
+    }
   }
   .card {
-    width: 100%;
-    &.story-simple, &.story-opinion {
-      height: auto;
-      width: 100%;
-      background-color: transparent;
-      border: none;
-      &::after {
-        background: $wild-sand;
-      }
-      img {
-        display: none;
-      }
-      .category{
-        display: none;
-      }
-      h1{
-        color:$dark-gray;
+    &.story {
+      time {
+        font-size: 10px;
       }
     }
+    width: 100%;
     &.story-major {
       width: 100%;
       height: 0;
@@ -757,13 +766,43 @@ a.link-wrap{
         font-size: 25px;
       }
     }
-    &.story-photo, &.story-preview {
+    &.story-photo, &.story-preview, &.story-simple, &.story-opinion {
       width: 100%;
       background-color: white;
+      height: auto;
+      min-height: 50px;
       .card-image {
         display: block;
         width: 100%;
-        height: 100%;
+        height: 288px;
+      }
+      height: auto;
+      .byline {
+        display: none;
+      }
+      .category{
+        display: none;
+      }
+      time {
+        bottom: 10px;
+      }
+      .card-preview{
+        display: none;
+      }
+      h1 {
+        margin-bottom: 30px;
+      }
+    }
+    &.story-opinion{
+      .card-image{
+        display: none;
+        background: $wild-sand;
+      }
+      &::after {
+        background: white;
+      }
+      h1 {
+        color: $dark-gray;
       }
     }
     &.cross-campus{
